--- a/index.html
+++ b/index.html
@@ -3,138 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- SEO Meta Tags -->
-    <title>
-      StudyHub - Student Marketplace for Assignments, Services & Resources
-    </title>
-    <meta
-      name="description"
-      content="StudyHub is the ultimate student platform for assignment help, home services, and study resources. Connect with fellow students, find tutors, and access educational materials."
-    />
-    <meta
-      name="keywords"
-      content="student platform, assignment help, study resources, college services, tutoring, educational marketplace, student community"
-    />
-    <meta name="author" content="StudyHub" />
-    <meta name="robots" content="index, follow" />
-
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://studyhub.app/" />
-    <meta
-      property="og:title"
-      content="StudyHub - Student Marketplace for Academic Success"
-    />
-    <meta
-      property="og:description"
-      content="Join thousands of students on StudyHub. Get assignment help, find home services, and access study resources all in one platform."
-    />
-    <meta property="og:image" content="https://studyhub.app/og-image.jpg" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:site_name" content="StudyHub" />
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://studyhub.app/" />
-    <meta
-      property="twitter:title"
-      content="StudyHub - Student Marketplace for Academic Success"
-    />
-    <meta
-      property="twitter:description"
-      content="Join thousands of students on StudyHub. Get assignment help, find home services, and access study resources all in one platform."
-    />
-    <meta
-      property="twitter:image"
-      content="https://studyhub.app/og-image.jpg"
-    />
-
-    <!-- Additional Meta Tags -->
-    <meta name="theme-color" content="#B27934" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="StudyHub" />
-
-    <!-- Preconnect for Performance -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
-    <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <link rel="manifest" href="/manifest.json" />
-
-    <!-- Critical CSS Prevention of FOUC -->
-    <style>
-      html {
-        font-family: Inter, system-ui, sans-serif;
-        scroll-behavior: smooth;
-      }
-      body {
-        margin: 0;
-        padding: 0;
-        font-synthesis: none;
-        text-rendering: optimizeLegibility;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-        background-color: #fffbf5;
-      }
-      /* Loading spinner */
-      .initial-loading {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(135deg, #fffbf5 0%, #fef7ed 100%);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        z-index: 9999;
-      }
-      .loading-spinner {
-        width: 40px;
-        height: 40px;
-        border: 4px solid #e5e7eb;
-        border-top: 4px solid #b27934;
-        border-radius: 50%;
-        animation: spin 1s linear infinite;
-      }
-      @keyframes spin {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-    </style>
+    <title>Hello world project</title>
   </head>
+
   <body>
-    <!-- Initial Loading Screen -->
-    <div id="initial-loading" class="initial-loading">
-      <div class="loading-spinner"></div>
-    </div>
-
     <div id="root"></div>
-
-    <!-- Remove loading screen once React loads -->
-    <script>
-      window.addEventListener("DOMContentLoaded", function () {
-        // Remove loading screen after a short delay to ensure React has started
-        setTimeout(function () {
-          const loading = document.getElementById("initial-loading");
-          if (loading) {
-            loading.style.opacity = "0";
-            loading.style.transition = "opacity 0.3s ease-out";
-            setTimeout(() => loading.remove(), 300);
-          }
-        }, 100);
-      });
-    </script>
 
     <script type="module" src="/src/main.tsx"></script>
   </body>
